--- a/html/fetch.html
+++ b/html/fetch.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desarrollo web</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>titulo 1</h1>
-    <h2>titulo 2</h2>
-    <h3>titulo 3</h3>
-    <h4>titulo 4</h4>
-    <h5>titulo 5</h5>
-    <h6>titulo 6</h6>
-<p>Hola mundo!</p>
+<p id="demo">
+
+</p>
+<script>
+fetch('https://jsonplaceholder.typicode.com/todos/1')
+.then(response => response.json())
+.then(json => console.log(json))
+    </script>
+
+
 </body>
 </html>
