--- a/curriculum.html/curriculum.html
+++ b/curriculum.html/curriculum.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Curriculum Vitae</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="/curriculum.html/estilos.css">
     <script src="https://kit.fontawesome.com/574ea05d5b.js" crossorigin="anonymous"></script>
-    <script src="/js.index/curriculum.js"></script>
+    <script src="/curriculum.html/curriculum.js"></script>
   </head>
   <body>
     <audio src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" autoplay loop></audio>
